# splot

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  index.html  package-lock.json  package.json  quick-capture.html  srcery.yml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: release.yml
.github/workflows/: ci.yml  release.yml
docs/: releasing.md
flatpak/: info.galu.dev.splot.desktop  info.galu.dev.splot.metainfo.xml  info.galu.dev.splot.yml
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  quick-capture.json
src-tauri/icons/: icon.icns
src-tauri/resources/workspace/: welcome.md
src-tauri/resources/workspace/inbox/: scraps.md
src-tauri/resources/workspace/notes/: ideas.md  todo.md
src-tauri/src/: lib.rs  main.rs  quick_capture.rs  workspace.rs
src/app/: App.refresh.test.tsx  App.tsx
src/components/: Breadcrumb.tsx  EmptyState.tsx  Resizer.tsx
src/features/commands/: CommandPalette.tsx
src/features/conflict/: ConflictDiffModal.tsx
src/features/editor/: EditorPane.tsx  conceal.test.ts  conceal.ts  date-calc.ts  focus-mode.ts  inline-calc.ts  line-commands.ts  links.ts  paragraph-selection.ts  task-stamp.test.ts  task-stamp.ts  task-toggle.ts  theme.ts  typewriter.ts
src/features/help/: HelpModal.tsx
src/features/quickcapture/: QuickCaptureApp.tsx  main.tsx  quickcapture.css
src/features/quickopen/: HighlightedText.tsx  QuickOpen.tsx
src/features/settings/: SettingsPanel.tsx
src/features/updates/: UpdateModal.tsx
src/features/workspace/: MoveFileModal.tsx  RenameFileModal.tsx  WorkspaceSidebar.tsx  (+1 more)
src/i18n/: i18n.ts
src/services/: bridge.ts  cursorMemory.ts  fileIndex.ts  fuzzy.ts  headings.ts  keyLabel.ts  lastFile.ts  parseCapture.test.ts  parseCapture.ts  quickCapture.ts  settings.ts  updater.ts  workspaceProvider.ts
src/styles/: app.css  base.css  tokens.css
src/test/: setup.ts
src/types/: workspace.ts
