[package]
name = "splot"
version = "0.1.0"
description = "Splot — a calm, minimal workspace editor"
authors = ["Michał Galiński"]
edition = "2021"
rust-version = "1.77"
license = "MIT"

[lib]
name = "splot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
