[package]
name = "splot"
version = "0.2.33"
description = "Splot — a calm, minimal workspace editor"
authors = ["Michał Galiński"]
edition = "2021"
rust-version = "1.77"
license = "MIT"

[lib]
name = "splot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
# Global shortcut powers Quick Capture's OS-wide hotkey. Desktop-only by
# nature; the plugin is a no-op target on mobile so it stays in the shared
# dependency list.
tauri-plugin-global-shortcut = "2"

[target."cfg(any(target_os = \"macos\", windows))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
# Single-instance lives next to updater/process: same platform set we
# actually build for, and the same "desktop-only" rationale (mobile
# targets don't have parallel-launch problems).
tauri-plugin-single-instance = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
